# whalengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
data/: sprites.xcf
data/map/: project.tiled-project  project.tiled-session  testmap.tmj  testmap2.tmj  testworld.world  tile-collision.tsj  tileset-small.tsj  widemap.tmj
data/map/templates/: CameraFocus.tj  template_checkpoint2.tj
data/sprite/: atlas.hash  atlas.xml
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
lib/json/: json_fwd.hpp
scripts/: makeatlas.sh
shader/: coloronly-frag.glsl  fragment.glsl  outline-frag.glsl  sprite-frag.glsl  sprite-rgb-frag.glsl  vertex-rgb.glsl  vertex-rgbuv.glsl  vertex-uv.glsl  vertex.glsl
src/: main.cpp
src/ECS/Components/: AnimUtil.h  Animation.h  Animator.cpp  Animator.h  Blaster.cpp  Blaster.h  Callback.h  Collision.cpp  Collision.h  Draw.cpp  Draw.h  Lifetime.h  Name.cpp  Name.h  PathControl.cpp  PathControl.h  PlayerControl.cpp  PlayerControl.h  Position.cpp  Position.h  Radius.h  RailsControl.cpp  RailsControl.h  Relationships.cpp  Relationships.h  RigidBody.cpp  RigidBody.h  SolidBody.cpp  SolidBody.h  Tags.h  Transform.cpp  Transform.h  TriggerZone.cpp  TriggerZone.h  Velocity.cpp  Velocity.h
src/ECS/Entities/: Block.cpp  Block.h  Camera.cpp  Camera.h  Explosion.cpp  Explosion.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
src/ECS/Lib/: Component.h  ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  README.md  System.h  SystemManager.h  todo.md
src/ECS/Systems/: Animation.cpp  Animation.h  CallbackSystem.cpp  CallbackSystem.h  CollisionManager.cpp  CollisionManager.h  CollisionManagerSystem.h  Controller.cpp  Controller.h  DrawManager.cpp  DrawManager.h  Gfx.cpp  Gfx.h  Lifetime.cpp  Lifetime.h  PathController.cpp  PathController.h  Physics.cpp  Physics.h  Rails.cpp  Rails.h  RelationshipManager.cpp  RelationshipManager.h  TagTrackers.cpp  TagTrackers.h  TriggerSystem.cpp  TriggerSystem.h
src/Game/: DebugScene.cpp  DebugScene.h  EventListeners.cpp  EventListeners.h  Events.h  Game.cpp  Game.h  StressTest.h
src/Gfx/: Color.cpp  Color.h  GLResourceManager.cpp  GLResourceManager.h  GfxUtil.cpp  GfxUtil.h  IUseOpenGLHandle.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexObject.cpp  VertexObject.h  Window.cpp  Window.h
src/Map/: ComponentFactory.cpp  ComponentFactory.h  Level.cpp  Level.h  Tiled.cpp  Tiled.h
src/Physics/: Actor.cpp  Actor.h  CollisionManager.cpp  CollisionManager.h  IUseCollision.cpp  IUseCollision.h  Material.cpp  Material.h  Solid.cpp  Solid.h
src/Physics/Collision/: AABB.cpp  AABB.h  HitInfo.cpp  HitInfo.h  Segment.cpp  Segment.h
src/Systems/: Audio.cpp  Audio.h  DebugCollisionViewer.cpp  DebugCollisionViewer.h  Deltatime.cpp  Deltatime.h  Event.h  Frametracker.cpp  Frametracker.h  InputHandler.cpp  InputHandler.h  JobScheduler.cpp  JobScheduler.h  README.md  Random.cpp  Random.h  System.h
src/Util/: Expected.h  Factory.h  FileIO.cpp  FileIO.h  Image.cpp  Image.h  MathUtil.h  Print.h  String.cpp  String.h  Traits.h  Types.h  Vector.cpp  Vector.h
tools/: check.sh  custom_check.py
